{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 194,
  "lineage": "5fee3fac-9f1a-3321-3328-24a7ac053c08",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/p1-load-balancer/frontendIPConfigurations/p1-load-balancer-frontend-ip",
                "name": "p1-load-balancer-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/p1-public-ip"
              }
            ],
            "id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/p1-load-balancer",
            "location": "southcentralus",
            "name": "p1-load-balancer",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Project": "1"
            }
          },
          "dependencies": [
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/p1-load-balancer/backendAddressPools/backend-address-pool",
            "loadbalancer_id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/p1-load-balancer",
            "name": "backend-address-pool"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_public_ip.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/p1-network-interface0",
            "internal_domain_name_suffix": "xhcl3vdomrzuppmqoldbzgke2a.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/p1-network/subnets/internal"
              }
            ],
            "location": "southcentralus",
            "name": "p1-network-interface0",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "Project": "1"
            }
          },
          "dependencies": [
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/p1-network-interface1",
            "internal_domain_name_suffix": "xhcl3vdomrzuppmqoldbzgke2a.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/p1-network/subnets/internal"
              }
            ],
            "location": "southcentralus",
            "name": "p1-network-interface1",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "Project": "1"
            }
          },
          "dependencies": [
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/p1-load-balancer/backendAddressPools/backend-address-pool",
            "id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/p1-network-interface0/ipConfigurations/internal|/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/p1-load-balancer/backendAddressPools/backend-address-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/p1-network-interface0"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/p1-load-balancer/backendAddressPools/backend-address-pool",
            "id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/p1-network-interface1/ipConfigurations/internal|/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/p1-load-balancer/backendAddressPools/backend-address-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/p1-network-interface1"
          },
          "dependencies": [
            "azurerm_lb.main",
            "azurerm_lb_backend_address_pool.main",
            "azurerm_network_interface.main",
            "azurerm_public_ip.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/p1-security-group",
            "location": "southcentralus",
            "name": "p1-security-group",
            "resource_group_name": "Azuredevops",
            "security_rule": [],
            "tags": {
              "Project": "1"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "description-ssh",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/p1-security-group/securityRules/inboundAccessSSH",
            "name": "inboundAccessSSH",
            "network_security_group_name": "p1-security-group",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "10.0.0.0/24",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "10.0.0.0/24",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/p1-security-group/securityRules/DenyAllInbound",
            "name": "DenyAllInbound",
            "network_security_group_name": "p1-security-group",
            "priority": 300,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/p1-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "p1-public-ip",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Project": "1"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/p1-network/subnets/internal",
            "name": "internal",
            "resource_group_name": "Azuredevops",
            "virtual_network_name": "p1-network"
          },
          "dependencies": [
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d4bec4b9-646e-4773-bd90-72c61c9944e0",
            "id": "/subscriptions/055225e5-24c2-4b9b-bd53-954939e76965/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/p1-network",
            "location": "southcentralus",
            "name": "p1-network",
            "resource_group_name": "Azuredevops",
            "tags": {
              "Project": "1"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}